--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -121,24 +121,6 @@
 	менеджер или приложение для безопасного удаления файлов.</p>
     ]]></string>
 
-    <string name="help_wallet"><![CDATA[
-        <h1>Кошелек</h1>
-        <h2>Сканирование</h2>
-        Поскольку Monero ориентирована на подержание анонимности, всякий раз, когда вы открываете кошелёк
-	Monerujo, нам приходится сканировать блокчейн, чтобы посмотреть, были ли отправлены на ваш кошелёк
-	новые Monero. Информация сохраняется только на вашем телефоне, привязанном к вашему кошельку.
-	Иногда это может занять какое-то время, так как вы не синхронизировались в течение долгого периода.
-        <h2>Баланс</h2>
-        <p><b>Помогите! Баланс моего кошелька куда-то исчез или не подтверждён!</b><br/>
-        Не паникуйте! Если вы отправляете средства с вашего кошелька, ваш баланс временно остаётся
-	неподтверждённым. Это происходит в результате процесса обмена Monero в блокчейне и работы механизма
-        сдачи. Подробности обмена можно узнать по ссылке:
-	https://getmonero.org/resources/moneropedia/change.html
-        <h2>Список транзакций</h2>
-        <p>Список транзакций, проведённых с использованием этого кошелька. В кошельках просмотра можно увидеть
-	только входящие транзакции.</p>
-    ]]></string>
-
     <string name="help_tx_details"><![CDATA[
         <h1>Детали транзакции</h1>
         <h2>Адрес назначения</h2>
@@ -237,5 +219,28 @@
         <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
         ввести его в поле \"Восстановить высоту\". Вы также можете использовать дату в формате YYYY-MM-DD.
  	Если вы не уверены, введите приблизительную дату/высоту блока <em>до</em> того как вы впервые использовали этот кошелек.</p>
+    ]]></string>
+
+    <string name="help_wallet"><![CDATA[
+        <h1>Кошелек</h1>
+        <h2>Street Mode</h2>
+        <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
+        balance is not shown on any screen so you can safely use your wallet on the street, a pub or
+        other public place. Previous transactions are also hidden. New transactions will be shown, so
+        you can see that you have sent/received sweet Moneroj!</p>
+        <h2>Сканирование</h2>
+        Поскольку Monero ориентирована на подержание анонимности, всякий раз, когда вы открываете кошелёк
+	Monerujo, нам приходится сканировать блокчейн, чтобы посмотреть, были ли отправлены на ваш кошелёк
+	новые Monero. Информация сохраняется только на вашем телефоне, привязанном к вашему кошельку.
+	Иногда это может занять какое-то время, так как вы не синхронизировались в течение долгого периода.
+        <h2>Баланс</h2>
+        <p><b>Помогите! Баланс моего кошелька куда-то исчез или не подтверждён!</b><br/>
+        Не паникуйте! Если вы отправляете средства с вашего кошелька, ваш баланс временно остаётся
+	неподтверждённым. Это происходит в результате процесса обмена Monero в блокчейне и работы механизма
+        сдачи. Подробности обмена можно узнать по ссылке:
+	https://getmonero.org/resources/moneropedia/change.html
+        <h2>Список транзакций</h2>
+        <p>Список транзакций, проведённых с использованием этого кошелька. В кошельках просмотра можно увидеть
+	только входящие транзакции.</p>
     ]]></string>
 </resources>
