--- a/app/src/main/res/menu/list_context_menu.xml
+++ b/app/src/main/res/menu/list_context_menu.xml
@@ -2,25 +2,29 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_info"
-        android:icon="@drawable/ic_info_white_24dp"
-        android:title="@string/menu_info" />
-
-    <item
         android:id="@+id/action_receive"
-        android:icon="@drawable/ic_monero_qr_24dp"
+        android:orderInCategory="100"
         android:title="@string/menu_receive" />
 
     <item
         android:id="@+id/action_rename"
+        android:orderInCategory="200"
         android:title="@string/menu_rename" />
 
     <item
         android:id="@+id/action_backup"
+        android:orderInCategory="300"
         android:title="@string/menu_backup" />
 
     <item
         android:id="@+id/action_archive"
+        android:orderInCategory="400"
         android:title="@string/menu_archive" />
+
+    <item
+        android:id="@+id/action_info"
+        android:icon="@drawable/ic_info_white_24dp"
+        android:orderInCategory="500"
+        android:title="@string/menu_info" />
 
 </menu>
